--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
 	<body>
 
 	<div class="baixeoapp">
-	<a href="#"><img id="bt_baixeoapp" src="bt_baixeoapp.jpg"></a>e aproveite as ofertas exclusivas<a href="#">CONFIRA</a>
+	<a href="#"><img id="bt_baixeoapp" src="bt_baixeoapp.jpg"></a>e aproveite as ofertas exclusivas  CONFIRA
 	</div>
 
 	<div class="topopreto">
   		<div class="coluna1"><img id="bt_ren" src="bt_ren.jpg"><img id="bt_ashua" src="bt_ashua.jpg"></div>
-
 	</div>
 
-
 	<div class="menuren">
-	   
 	</div>
 	
 	<div class="menupresente">
@@ -31,16 +28,10 @@
 	        <li><a href="#"><img src="img_pessoa.jpg">Atendimento</a></li>
 	        <li><a href="#"><img src="img_blog.jpg">Blog</a></li>
 	    </ul>
-
 	</div>
 
-	<div class="menusearch">
-		<br>
-	<form class="search-container">
-  <label for="busca"></label>
-  <input type="search" id="busca" name="q" placeholder="Buscar Produtos">
-  </form>
-	
+	<div id="menusearch">
+		    <input type="text" id="msearch" placeholder="Buscar Produtos">
 	</div>
 
 	<div class="menunovidades">
@@ -61,19 +52,12 @@
 	        <li><a href="#">GEEK</a></li>
 	        <li><a href="#">OFERTAS</a></li>
 	    </ul>
-	<BR>
-
+	<BR><BR>
 	</div>
 
 	<div class="menunobanner">
 		<br>
 	MENU BANNER<BR>
-
 	</div>
-
-
-
-
 	</body>
-
 	</html>
