--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 	<body>
 
 	<div class="baixeoapp">
-	<a href="#"><img id="bt_baixeoapp" src="bt_baixeoapp.jpg"></a>e aproveite as ofertas exclusivas  CONFIRA
+		<a href="#"><img src="bt_baixeoapp.jpg"></a>
+		<p>e aproveite as ofertas exclusivas  <a href="#">CONFIRA</a></p>
 	</div>
 
-	<div class="topopreto">
-  		<div class="coluna1"><img id="bt_ren" src="bt_ren.jpg"><img id="bt_ashua" src="bt_ashua.jpg"></div>
-	</div>
+	<div class="topopreto"><div class="coluna1"><img id="bt_ren" src="bt_ren.jpg"><img id="bt_ashua" src="bt_ashua.jpg"></div></div>
 
-	<div class="menuren">
-	</div>
+	<div class="menuren"></div>
 	
 	<div class="menupresente">
 		<br>
@@ -30,9 +28,7 @@
 	    </ul>
 	</div>
 
-	<div id="menusearch">
-		    <input type="text" id="msearch" placeholder="Buscar Produtos">
-	</div>
+	<div id="menusearch"><input type="text" id="msearch" placeholder="Buscar Produtos"></div>
 
 	<div class="menunovidades">
 		<br>
@@ -55,9 +51,7 @@
 	<BR><BR>
 	</div>
 
-	<div class="menunobanner">
-		<br>
-	MENU BANNER<BR>
-	</div>
+	<div class="menunobanner"><br>MENU BANNER<BR></div>
+
 	</body>
 	</html>
